--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
     "react": "^16.7.0",
