--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2"
