--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "foo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://devonchurch.github.io/shortbread-biscuit/",
   "dependencies": {
     "@types/jest": "^23.3.11",
     "@types/node": "^10.12.18",
@@ -19,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
