--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "foo",
-  "version": "0.1.0",
+  "name": "shortbread-biscuit",
+  "version": "1.0.0",
+  "description": "An application that allows a user to investigate every New Zealand Lotto result in detail.",
   "private": true,
   "homepage": "https://devonchurch.github.io/shortbread-biscuit/",
   "dependencies": {
