--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
+    "moize": "^5.4.1",
     "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
