--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.12",
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
@@ -16,7 +17,9 @@
     "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
     "typescript": "^3.2.2"
   },
   "scripts": {
