--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-saga": "^0.16.2",
     "typescript": "^3.2.2"
   },
   "scripts": {
