--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://devonchurch.github.io/shortbread-biscuit/",
   "dependencies": {
     "@types/jest": "^23.3.11",
+    "@types/lodash.throttle": "^4.1.4",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
@@ -13,6 +14,7 @@
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
+    "lodash.throttle": "^4.1.1",
     "moize": "^5.4.1",
     "moment": "^2.23.0",
     "react": "^16.7.0",
