--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predict": "node ./prediction/create.js",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,6 +44,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "brain.js": "^1.6.1",
     "gh-pages": "^2.0.1"
   }
 }
