--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.12",
+    "@types/styled-components": "^4.1.6",
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
@@ -24,6 +25,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-saga": "^0.16.2",
+    "styled-components": "^4.1.3",
     "typescript": "^3.2.2"
   },
   "scripts": {
