--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.throttle": "^4.1.1",
     "moize": "^5.4.1",
     "moment": "^2.23.0",
+    "polished": "^2.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
